[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/icon/back.png" type="Texture" id=3]
[ext_resource path="res://menu/setting-menu/setting_menu.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/icon/save.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/input-color/input_color.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/icon/pick_color.png" type="Texture" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer2"]
margin_right = 600.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 113.0

[node name="back" type="Button" parent="CanvasLayer/Control/VBoxContainer2/PanelContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 106.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer2/PanelContainer/HBoxContainer/back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer2/PanelContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 482.0
margin_bottom = 106.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer2/PanelContainer/HBoxContainer/margin"]
margin_left = 96.0
margin_top = 23.0
margin_right = 282.0
margin_bottom = 83.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Setting"
align = 1
valign = 1

[node name="margin2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/PanelContainer/HBoxContainer"]
margin_left = 486.0
margin_right = 586.0
margin_bottom = 106.0
rect_min_size = Vector2( 100, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/VBoxContainer2"]
margin_top = 124.0
margin_right = 600.0
margin_bottom = 1024.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer"]
margin_right = 588.0
margin_bottom = 1040.0
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_right = 588.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="Label3" type="Label" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 588.0
margin_bottom = 69.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Player Name"
align = 1
valign = 1

[node name="player_name_setting" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 588.0
margin_bottom = 173.0
rect_min_size = Vector2( 0, 50 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/player_name_setting"]
margin_right = 10.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="input_name" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/player_name_setting"]
margin_left = 14.0
margin_right = 470.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 1
max_length = 20
placeholder_text = "Your Name"

[node name="save_name" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/player_name_setting"]
margin_left = 474.0
margin_right = 574.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )

[node name="ColorRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/player_name_setting/save_name"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/player_name_setting"]
margin_left = 578.0
margin_right = 588.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 588.0
margin_bottom = 217.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 221.0
margin_right = 588.0
margin_bottom = 365.0

[node name="team_1_setting" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 285.0
margin_bottom = 144.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_1_setting"]
margin_right = 285.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Team 1 Color"
align = 1
valign = 1

[node name="hbox" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_1_setting"]
margin_top = 44.0
margin_right = 285.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 100 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_1_setting/hbox"]
margin_right = 10.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="color" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_1_setting/hbox"]
margin_left = 14.0
margin_right = 181.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="team_1_randomize_color" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_1_setting/hbox"]
margin_left = 185.0
margin_right = 285.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )

[node name="ColorRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_1_setting/hbox/team_1_randomize_color"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 289.0
margin_right = 299.0
margin_bottom = 144.0
rect_min_size = Vector2( 10, 0 )

[node name="team_2_setting" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 303.0
margin_right = 588.0
margin_bottom = 144.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_2_setting"]
margin_right = 285.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Team 2 Color"
align = 1
valign = 1

[node name="hbox" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_2_setting"]
margin_top = 44.0
margin_right = 285.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 100 )

[node name="color" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_2_setting/hbox"]
margin_right = 167.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="team_2_randomize_color" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_2_setting/hbox"]
margin_left = 171.0
margin_right = 271.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )

[node name="ColorRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_2_setting/hbox/team_2_randomize_color"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_2_setting/hbox"]
margin_left = 275.0
margin_right = 285.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 369.0
margin_right = 588.0
margin_bottom = 409.0
rect_min_size = Vector2( 0, 40 )

[node name="Label4" type="Label" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 413.0
margin_right = 588.0
margin_bottom = 453.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Bot Difficulty"
align = 1
valign = 1

[node name="ai_setting" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 457.0
margin_right = 588.0
margin_bottom = 547.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/ai_setting"]
margin_right = 10.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="easy_btn" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/ai_setting"]
margin_left = 14.0
margin_right = 188.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Easy"

[node name="MarginContainer5" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/ai_setting"]
margin_left = 192.0
margin_right = 202.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="medium" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/ai_setting"]
margin_left = 206.0
margin_right = 381.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Medium"

[node name="MarginContainer6" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/ai_setting"]
margin_left = 385.0
margin_right = 395.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="hard" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/ai_setting"]
margin_left = 399.0
margin_right = 574.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Hard"

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/ai_setting"]
margin_left = 578.0
margin_right = 588.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer5" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 551.0
margin_right = 588.0
margin_bottom = 591.0
rect_min_size = Vector2( 0, 40 )

[node name="Label5" type="Label" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 595.0
margin_right = 588.0
margin_bottom = 635.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Map Size"
align = 1
valign = 1

[node name="map_setting" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 639.0
margin_right = 588.0
margin_bottom = 729.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/map_setting"]
margin_right = 10.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="map_small_btn" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/map_setting"]
margin_left = 14.0
margin_right = 188.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Small"

[node name="MarginContainer5" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/map_setting"]
margin_left = 192.0
margin_right = 202.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="map_normal_btn" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/map_setting"]
margin_left = 206.0
margin_right = 381.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Normal"

[node name="MarginContainer6" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/map_setting"]
margin_left = 385.0
margin_right = 395.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="map_large_btn" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/map_setting"]
margin_left = 399.0
margin_right = 574.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Large"

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/map_setting"]
margin_left = 578.0
margin_right = 588.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer6" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 733.0
margin_right = 588.0
margin_bottom = 773.0
rect_min_size = Vector2( 0, 40 )

[node name="Label6" type="Label" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 777.0
margin_right = 588.0
margin_bottom = 817.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Max Unit Deploy"
align = 1
valign = 1

[node name="pop_cap" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 821.0
margin_right = 588.0
margin_bottom = 911.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/pop_cap"]
margin_right = 10.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="small_size" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/pop_cap"]
margin_left = 14.0
margin_right = 188.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "10"

[node name="MarginContainer5" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/pop_cap"]
margin_left = 192.0
margin_right = 202.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="medium_size" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/pop_cap"]
margin_left = 206.0
margin_right = 381.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "15"

[node name="MarginContainer6" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/pop_cap"]
margin_left = 385.0
margin_right = 395.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="huge_size" type="Button" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/pop_cap"]
margin_left = 399.0
margin_right = 574.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "20"

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/pop_cap"]
margin_left = 578.0
margin_right = 588.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer7" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_top = 915.0
margin_right = 588.0
margin_bottom = 1040.0
rect_min_size = Vector2( 0, 125 )

[node name="input_color" parent="CanvasLayer/Control" instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/PanelContainer/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/player_name_setting/save_name" to="." method="_on_save_name_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_1_setting/hbox/team_1_randomize_color" to="." method="_on_team_1_randomize_color_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/team_2_setting/hbox/team_2_randomize_color" to="." method="_on_team_2_randomize_color_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/ai_setting/easy_btn" to="." method="_on_easy_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/ai_setting/medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/ai_setting/hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/map_setting/map_small_btn" to="." method="_on_map_small_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/map_setting/map_normal_btn" to="." method="_on_map_normal_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/map_setting/map_large_btn" to="." method="_on_map_large_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/pop_cap/small_size" to="." method="_on_small_size_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/pop_cap/medium_size" to="." method="_on_medium_size_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/ScrollContainer/VBoxContainer/pop_cap/huge_size" to="." method="_on_huge_size_pressed"]
